Add links to tf_idf theory

--- a/src/preprocessing_tutorials/tf_idf/tf_idf_theory.ipynb
+++ b/src/preprocessing_tutorials/tf_idf/tf_idf_theory.ipynb
@@ -67,7 +67,17 @@
     "\n",
     "#### 1. highest when t occurs many times within a small number of documents\n",
     "#### 2. lower when the term occurs fewer times in a document, or occurs in many documents\n",
-    "#### 3. lowest when the term occurs in virtually all documents"
+    "#### 3. lowest when the term occurs in virtually all documents\n",
+    "\n",
+    "\n",
+    "### Links\n",
+    "\n",
+    "1. http://nlp.stanford.edu/IR-book/\n",
+    "2. https://en.wikipedia.org/wiki/Tfidf\n",
+    "3. http://stevenloria.com/finding-important-words-in-a-document-using-tf-idf/\n",
+    "4. http://scikit-learn.org/stable/modules/feature_extraction.html\n",
+    "5. http://nlpx.net/archives/57\n",
+    "6. http://www.mechanoid.kiev.ua/ml-text-proc.html"
    ]
   }
  ],
